--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
       {
         "command": "extension.moveFunctionDown",
         "title": "FO: Move Function Down"
+      },
+      {
+        "command": "extension.sortFunctions",
+        "title": "FO: Sort Functions"
       }
     ],
     "keybindings": [
