--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "functions-organizer",
   "displayName": "Functions Organizer",
-  "description": "An extension to move and organize functions in a file using shortcuts instead cut-paste.",
+  "description": "An extension to move and organize functions in a file using shortcuts instead of cut&paste.",
   "version": "1.0.0",
-  "publisher": "alon008",
+  "publisher": "AlonAlexander",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Alon-Alexander/functions-organizer.git"
+  },
   "engines": {
     "vscode": "^1.28.0"
   },
